Added deleteByWordAndLanguage endpoint
